# pyxis

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  driver.rs  grammar.rs  mod.rs  package-lock.json  package.json  parser.rs  semantic_analysis.rs  test.ps1  test.py  test.sh
.github/workflows/: ci.yml  deploy-viewer.yml
backends/: rust.rs
codegen_tests/: Cargo.toml
codegen_tests/input/: atomics.pyxis  backend_for.pyxis  bitflags.pyxis  braced_imports.pyxis  calling_conventions.pyxis  cfg.pyxis  consts.pyxis  definition_body.pyxis  derived.pyx  diamond_inheritance.pyx  diamond_inheritance.pyxis  doc_comments.pyx  doc_comments.pyxis  enums.pyxis  extern_bindings.pyxis  extern_values.pyxis  external_body.pyxis  field_type_name_collision.pyxis  freestanding_functions.pyxis  generics.pyxis  generics_cross_module.pyxis  math.pyxis  min_size.pyxis  multiple_levels.pyx  multiple_levels.pyxis  nested_items.pyxis  pinned.pyxis  pyxis.toml  reexport.pyxis  reexport_consumer.pyxis  self_referential_generics.pyxis  singleton.pyxis  two_base_classes.pyx  two_base_classes.pyxis  type_alias_reexport.pyxis  type_aliases.pyxis  unicode.pyxis  vftable_indices.pyxis  world_consumer.pyxis  zero_size_type.pyxis
codegen_tests/json_output/: output.json
codegen_tests/output/: atomics.rs  bitflags.rs  derived.rs  diamond_inheritance.rs  doc_comments.rs  enums.rs  freestanding_functions.rs  generics.rs  lib.rs  min_size.rs  multiple_levels.rs  self_referential_generics.rs  two_base_classes.rs  type_aliases.rs
docs/: cpp_backend.md  json_backend.md  language.md  rust_backend.md
driver/: Cargo.toml
driver/src/: main.rs
examples/: codegen_tests.rs  compile.rs
layout/msvc2022/: output.txt  test.bat  test.cpp
parser/: mod.rs  tests.rs
pyxis_macros/: Cargo.toml
pyxis_macros/src/: lib.rs
semantic_analysis/: module.rs  semantic_state.rs  tests.rs  type_registry.rs  types.rs
src/: config.rs  driver.rs  grammar.rs  lib.rs  main.rs  pretty_print.rs  source_store.rs  span.rs  util.rs
src/backends/: error.rs  json.rs  json.ts  mod.rs  rust.rs
src/parser/: attributes.rs  cfg.rs  core.rs  error.rs  expressions.rs  external.rs  functions.rs  items.rs  mod.rs  module.rs  paths.rs  recursive_descent.rs  strip_spans.rs  tests.rs  types.rs
src/salsa/: db.rs  inputs.rs  ir.rs  mod.rs  queries.rs
src/semantic/: attribute.rs  bitflags_definition.rs  builder.rs  const_definition.rs  db.rs  declaration_registry.rs  doc_links.rs  enum_definition.rs  error.rs  extern_value_definition.rs  function.rs  inputs.rs  ir.rs  mod.rs  module.rs  name_index.rs  output.rs  queries.rs  resolution_context.rs  semantic_state.rs  type_alias_definition.rs  type_registry.rs  types.rs  validation.rs
tests/: check.rs  module_mounting.rs
tooling/: sync-grammar.py
tooling/lsp/: Cargo.toml
tooling/lsp/src/: handlers.rs  lib.rs  main.rs  main_loop.rs  span.rs  state.rs
tooling/lsp/src/handlers/: code_action.rs  completion.rs  doc_links.rs  hover_format.rs  mod.rs  navigation.rs  outline.rs  references.rs  symbols.rs
tooling/lsp/tests/: diagnostics_save_test.rs  integration.rs  navigation_test.rs  snapshots.rs  structures_test.rs  watched_files_test.rs
tools/: check-pyxis-defs.py
types/: json.ts  package.json
viewer/: README.md  eslint.config.js  index.html  package.json  vite.config.ts
(+242 files in other folders)
