[workspace]
members = [".", "driver", "codegen_tests"]
default-members = [".", "driver"]

[workspace.dependencies]
anyhow = "1.0"

[package]
name = "pyxis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
glob = { version = "0.3.0" }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "2.0", features = ["full", "extra-traits"] }
prettyplease = "0.2.20"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
chumsky = "1.0.0-alpha.8"
ariadne = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
