[workspace]
members = [".", "driver", "codegen_tests", "pyxis_macros"]
default-members = [".", "driver"]

[workspace.dependencies]
specta = { git = "https://github.com/specta-rs/specta.git", rev = "effe988832312009388a11487ad0ceb09b934a80", features = [
    "derive",
    "export",
] }
specta-typescript = { git = "https://github.com/specta-rs/specta.git", rev = "effe988832312009388a11487ad0ceb09b934a80" }

[package]
name = "pyxis"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = { version = "0.3.0" }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "2.0", features = ["full", "extra-traits"] }
prettyplease = "0.2"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
ariadne = "0.6.0"
pyxis_macros = { path = "pyxis_macros" }

# driver-only
serde_json = { version = "1.0", optional = true }
specta = { workspace = true, optional = true }

[features]
json = ["dep:serde_json", "dep:specta"]

[[example]]
name = "codegen_tests"
required-features = ["json"]

[dev-dependencies]
pretty_assertions = "1.4"
