[package]
name = "pyxis-lsp"
version = "0.1.0"
edition = "2024"

[lib]
name = "pyxis_lsp"
path = "src/lib.rs"

[[bin]]
name = "pyxis-lsp"
path = "src/main.rs"

[dependencies]
pyxis = { path = "../.." }
lsp-server = "0.8"
lsp-types = "0.97"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
url = "2.5"

[dev-dependencies]
expect-test = "1.4"
